fixed chat spacing issues

--- a/client/src/Components/Chat/chat.css
+++ b/client/src/Components/Chat/chat.css
@@ -44,6 +44,7 @@
 .ChatInput {
   height: 35px;
   display: flex;
+  flex-shrink: 0;
   /* align-items: center; */
   border-top: 1px solid #ddd;
   width: 100%
